--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/lpd8987/430-Project-1/issues"
   },
-  "homepage": "https://github.com/lpd8987/430-Project-1#readme"
+  "homepage": "https://github.com/lpd8987/430-Project-1#readme",
+  "devDependencies": {
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
